--- a/index.html
+++ b/index.html
@@ -418,11 +418,11 @@
             <!-- Project 2 -->
             <div class="project-card" 
                  style="background:rgba(255,255,255,0.05); border:1px solid #0ff; border-radius:15px; padding:20px; text-align:center; transition:0.3s;">
-                <h3 style="color:#0ff; margin-bottom:15px;">Authentication</h3>
-                <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">Authentication is the process of verifying and validating a user’s identity by confirming one or more distinct factors: something they know, such as a password or PIN; something they have, like a phone, smart card, or hardware token; or something inherent, including unique biometrics or behavioral traits, ensuring secure and authorized access</p>
-                <a href="/msf_Task.pdf" target="_blank" 
+                <h3 style="color:#0ff; margin-bottom:15px;">Packet Sniffer & Firewall</h3>
+                <p style="font-size:0.95rem; color:#ddd; margin-bottom:20px;">Built a lightweight packet sniffer and a custom firewall in Python using Scapy. The sniffer captures and logs live network traffic (source/destination IP and protocol), while the firewall monitors packets, logs events, and blocks traffic based on defined rules. These projects highlight skills in network programming, traffic analysis, and security controls through hands-on defensive tooling.</p>
+                <a href="https://github.com/kareem-omran02/network-tools" target="_blank" 
                    style="display:inline-block; padding:10px 20px; background:#0ff; color:#000; border-radius:30px; text-decoration:none; font-weight:bold;">
-                   📄 View PDF
+                   📄 View Repo
                 </a>
             </div>
 
